// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Progress circle progress should accept steps 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="70"
  class="ant-progress ant-progress-status-normal ant-progress-steps ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-steps-body"
  >
    <div
      class="ant-progress-steps-item ant-progress-steps-item-active"
      style="width: 14px; height: 8px;"
    />
    <div
      class="ant-progress-steps-item ant-progress-steps-item-active"
      style="width: 14px; height: 8px;"
    />
    <div
      class="ant-progress-steps-item ant-progress-steps-item-active"
      style="width: 14px; height: 8px;"
    />
    <div
      class="ant-progress-steps-item ant-progress-steps-item-active"
      style="width: 14px; height: 8px;"
    />
    <div
      class="ant-progress-steps-item"
      style="width: 14px; height: 8px;"
    />
    <span
      class="ant-progress-indicator"
      title="70%"
    >
      70%
    </span>
  </div>
</div>
`;

exports[`Progress circle progress steps can be number 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="70"
  class="ant-progress ant-progress-status-normal ant-progress-steps ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-steps-body"
  >
    <div
      class="ant-progress-steps-item ant-progress-steps-item-active"
      style="width: 14px; height: 8px;"
    />
    <div
      class="ant-progress-steps-item ant-progress-steps-item-active"
      style="width: 14px; height: 8px;"
    />
    <div
      class="ant-progress-steps-item ant-progress-steps-item-active"
      style="width: 14px; height: 8px;"
    />
    <div
      class="ant-progress-steps-item ant-progress-steps-item-active"
      style="width: 14px; height: 8px;"
    />
    <div
      class="ant-progress-steps-item"
      style="width: 14px; height: 8px;"
    />
    <span
      class="ant-progress-indicator"
      title="70%"
    >
      70%
    </span>
  </div>
</div>
`;

exports[`Progress render dashboard 295 gapDegree 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="0"
  class="ant-progress ant-progress-status-normal ant-progress-circle ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      role="presentation"
      viewBox="0 0 100 100"
    >
      <circle
        class="ant-progress-circle-rail"
        cx="50"
        cy="50"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 53.31980864842677px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(237.5deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
      />
      <circle
        class="ant-progress-circle-path"
        cx="50"
        cy="50"
        opacity="0"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 53.31980864842677px 295.3097094374406; stroke-dashoffset: 53.309808648426774; transform: rotate(237.5deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
      <circle
        class="ant-progress-circle-path"
        cx="50"
        cy="50"
        opacity="0"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 53.31980864842677px 295.3097094374406; stroke-dashoffset: 53.309808648426774; transform: rotate(237.5deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-indicator"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render dashboard 296 gapDegree 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="0"
  class="ant-progress ant-progress-status-normal ant-progress-circle ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      role="presentation"
      viewBox="0 0 100 100"
    >
      <circle
        class="ant-progress-circle-rail"
        cx="50"
        cy="50"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 52.499503899989435px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(238deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
      />
      <circle
        class="ant-progress-circle-path"
        cx="50"
        cy="50"
        opacity="0"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 52.499503899989435px 295.3097094374406; stroke-dashoffset: 52.48950389998944; transform: rotate(238deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
      <circle
        class="ant-progress-circle-path"
        cx="50"
        cy="50"
        opacity="0"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 52.499503899989435px 295.3097094374406; stroke-dashoffset: 52.48950389998944; transform: rotate(238deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-indicator"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render dashboard zero gapDegree 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="0"
  class="ant-progress ant-progress-status-normal ant-progress-circle ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      role="presentation"
      viewBox="0 0 100 100"
    >
      <circle
        class="ant-progress-circle-rail"
        cx="50"
        cy="50"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
      />
      <circle
        class="ant-progress-circle-path"
        cx="50"
        cy="50"
        opacity="0"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 295.2997094374406; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
      <circle
        class="ant-progress-circle-path"
        cx="50"
        cy="50"
        opacity="0"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 295.2997094374406; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-indicator"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render format 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="10"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 100%;"
  >
    <div
      class="ant-progress-rail"
      style="height: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 50%; height: 8px;"
      />
      <div
        class="ant-progress-track ant-progress-track-success"
        style="width: 10%; height: 8px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="50 10"
    >
      50 10
    </span>
  </div>
</div>
`;

exports[`Progress render inner info position 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="100"
  class="ant-progress ant-progress-status-success ant-progress-line ant-progress-line-align-center ant-progress-line-position-inner ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 400px;"
  >
    <div
      class="ant-progress-rail"
      style="height: 20px;"
    >
      <div
        class="ant-progress-track"
        style="width: 100%; height: 20px;"
      >
        <span
          class="ant-progress-indicator ant-progress-indicator-center ant-progress-indicator-inner"
          title="100%"
        >
          100%
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress render negative progress 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="-20"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 100%;"
  >
    <div
      class="ant-progress-rail"
      style="height: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 0%; height: 8px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render negative successPercent 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="-20"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 100%;"
  >
    <div
      class="ant-progress-rail"
      style="height: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 50%; height: 8px;"
      />
      <div
        class="ant-progress-track ant-progress-track-success"
        style="width: 0%; height: 8px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="50%"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Progress render normal progress 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="0"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 100%;"
  >
    <div
      class="ant-progress-rail"
      style="height: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 0%; height: 8px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render out-of-range progress 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="120"
  class="ant-progress ant-progress-status-success ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 100%;"
  >
    <div
      class="ant-progress-rail"
      style="height: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 100%; height: 8px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Progress render out-of-range progress with info 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="120"
  class="ant-progress ant-progress-status-success ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 100%;"
  >
    <div
      class="ant-progress-rail"
      style="height: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 100%; height: 8px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Progress render strokeColor 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="ant-progress ant-progress-status-normal ant-progress-circle ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      role="presentation"
      viewBox="0 0 100 100"
    >
      <circle
        class="ant-progress-circle-rail"
        cx="50"
        cy="50"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
      />
      <circle
        class="ant-progress-circle-path"
        cx="50"
        cy="50"
        opacity="1"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: red; stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 150.6548547187203; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
      <circle
        class="ant-progress-circle-path"
        cx="50"
        cy="50"
        opacity="0"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #52C41A; stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 295.2997094374406; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-indicator"
      title="50%"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Progress render strokeColor 2`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 100%;"
  >
    <div
      class="ant-progress-rail"
      style="height: 8px;"
    >
      <div
        class="ant-progress-track"
        style="background: linear-gradient(to right, #108ee9, #87d068); --progress-line-stroke-color: linear-gradient(to right, #108ee9, #87d068); width: 50%; height: 8px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="50%"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Progress render strokeColor 3`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 100%;"
  >
    <div
      class="ant-progress-rail"
      style="height: 8px;"
    >
      <div
        class="ant-progress-track"
        style="--progress-line-stroke-color: linear-gradient(to right, #108ee9 0%, #87d068 100%); width: 50%; height: 8px; background: linear-gradient(to right, #108ee9 0%, #87d068 100%);"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="50%"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Progress render strokeWidth of progress 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    class="ant-progress ant-progress-status-normal ant-progress-circle ant-progress-show-info css-var-root"
    role="progressbar"
  >
    <div
      class="ant-progress-body"
      style="width: 120px; height: 120px; font-size: 24px;"
    >
      <svg
        class="ant-progress-circle"
        role="presentation"
        viewBox="0 0 100 100"
      >
        <circle
          class="ant-progress-circle-rail"
          cx="50"
          cy="50"
          r="25"
          stroke-linecap="round"
          stroke-width="50"
          style="stroke-dasharray: 157.07963267948966px 157.07963267948966; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
        />
        <circle
          class="ant-progress-circle-path"
          cx="50"
          cy="50"
          opacity="1"
          r="25"
          stroke-linecap="round"
          stroke-width="50"
          style="stroke-dasharray: 157.07963267948966px 157.07963267948966; stroke-dashoffset: 134.95574287564276; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
        <circle
          class="ant-progress-circle-path"
          cx="50"
          cy="50"
          opacity="0"
          r="25"
          stroke-linecap="round"
          stroke-width="50"
          style="stroke: #52C41A; stroke-dasharray: 157.07963267948966px 157.07963267948966; stroke-dashoffset: 157.06963267948967; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
        />
      </svg>
      <span
        class="ant-progress-indicator"
        title="30%"
      >
        30%
      </span>
    </div>
  </div>
</div>
`;

exports[`Progress render successColor progress 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="30"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 100%;"
  >
    <div
      class="ant-progress-rail"
      style="height: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 60%; height: 8px;"
      />
      <div
        class="ant-progress-track ant-progress-track-success"
        style="background-color: rgb(255, 255, 255); width: 30%; height: 8px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="60%"
    >
      60%
    </span>
  </div>
</div>
`;

exports[`Progress render successColor progress type="circle" 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="30"
  class="ant-progress ant-progress-status-normal ant-progress-circle ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      role="presentation"
      viewBox="0 0 100 100"
    >
      <circle
        class="ant-progress-circle-rail"
        cx="50"
        cy="50"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
      />
      <circle
        class="ant-progress-circle-path"
        cx="50"
        cy="50"
        opacity="1"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 209.7167966062084; transform: rotate(18deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
      <circle
        class="ant-progress-circle-path"
        cx="50"
        cy="50"
        opacity="1"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #ffffff; stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 209.7167966062084; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-indicator"
      title="60%"
    >
      60%
    </span>
  </div>
</div>
`;

exports[`Progress render successColor progress type="dashboard" 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="30"
  class="ant-progress ant-progress-status-normal ant-progress-circle ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="ant-progress-circle"
      role="presentation"
      viewBox="0 0 100 100"
    >
      <circle
        class="ant-progress-circle-rail"
        cx="50"
        cy="50"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 233.78685330464043px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(127.5deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
      />
      <circle
        class="ant-progress-circle-path"
        cx="50"
        cy="50"
        opacity="1"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke-dasharray: 233.78685330464043px 295.3097094374406; stroke-dashoffset: 166.6507973132483; transform: rotate(213deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
      <circle
        class="ant-progress-circle-path"
        cx="50"
        cy="50"
        opacity="1"
        r="47"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #ffffff; stroke-dasharray: 233.78685330464043px 295.3097094374406; stroke-dashoffset: 166.6507973132483; transform: rotate(127.5deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
      />
    </svg>
    <span
      class="ant-progress-indicator"
      title="60%"
    >
      60%
    </span>
  </div>
</div>
`;

exports[`Progress render trailColor progress 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="0"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 100%;"
  >
    <div
      class="ant-progress-rail"
      style="background-color: rgb(255, 255, 255); height: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 0%; height: 8px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="0"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-show-info ant-progress-rtl css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body"
    style="width: 100%;"
  >
    <div
      class="ant-progress-rail"
      style="height: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 0%; height: 8px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress should support orientation 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="60"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-line-vertical ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body ant-progress-body-vertical"
  >
    <div
      class="ant-progress-rail"
      style="width: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 100%; height: 60%; position: absolute; top: auto; bottom: 0px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="60%"
    >
      60%
    </span>
  </div>
</div>
`;

exports[`Progress should support orientation 2`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="80"
  class="ant-progress ant-progress-status-exception ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-line-vertical ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body ant-progress-body-vertical"
  >
    <div
      class="ant-progress-rail"
      style="width: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 100%; height: 80%; position: absolute; top: auto; bottom: 0px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Progress should support orientation 3`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="100"
  class="ant-progress ant-progress-status-success ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-line-vertical ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body ant-progress-body-vertical"
  >
    <div
      class="ant-progress-rail"
      style="width: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 100%; height: 100%; position: absolute; top: auto; bottom: 0px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`Progress should support orientation with active status 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="ant-progress ant-progress-status-active ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-line-vertical ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body ant-progress-body-vertical"
  >
    <div
      class="ant-progress-rail"
      style="width: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 100%; height: 50%; position: absolute; top: auto; bottom: 0px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="50%"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Progress should support orientation with object strokeColor gradient 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="60"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-line-vertical ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body ant-progress-body-vertical"
  >
    <div
      class="ant-progress-rail"
      style="width: 8px;"
    >
      <div
        class="ant-progress-track"
        style="background: linear-gradient(to top, #aaa, #bbb); --progress-line-stroke-color: linear-gradient(to top, #aaa, #bbb); width: 100%; height: 60%; position: absolute; top: auto; bottom: 0px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="60%"
    >
      60%
    </span>
  </div>
</div>
`;

exports[`Progress should support orientation with showInfo 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="60"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-line-vertical css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body ant-progress-body-vertical"
  >
    <div
      class="ant-progress-rail"
      style="width: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 100%; height: 60%; position: absolute; top: auto; bottom: 0px;"
      />
    </div>
  </div>
</div>
`;

exports[`Progress should support orientation with strokeColor 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="60"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-line-vertical ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body ant-progress-body-vertical"
  >
    <div
      class="ant-progress-rail"
      style="width: 8px;"
    >
      <div
        class="ant-progress-track"
        style="--progress-line-stroke-color: #52c41a; background: rgb(82, 196, 26); width: 100%; height: 60%; position: absolute; top: auto; bottom: 0px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="60%"
    >
      60%
    </span>
  </div>
</div>
`;

exports[`Progress should support orientation with strokeWidth 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="60"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-line-vertical ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body ant-progress-body-vertical"
  >
    <div
      class="ant-progress-rail"
      style="width: 20px;"
    >
      <div
        class="ant-progress-track"
        style="width: 100%; height: 60%; position: absolute; top: auto; bottom: 0px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="60%"
    >
      60%
    </span>
  </div>
</div>
`;

exports[`Progress should support orientation with success 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="30"
  class="ant-progress ant-progress-status-normal ant-progress-line ant-progress-line-align-end ant-progress-line-position-outer ant-progress-line-vertical ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-body ant-progress-body-vertical"
  >
    <div
      class="ant-progress-rail"
      style="width: 8px;"
    >
      <div
        class="ant-progress-track"
        style="width: 100%; height: 80%; position: absolute; top: auto; bottom: 0px;"
      />
      <div
        class="ant-progress-track ant-progress-track-success"
        style="background-color: rgb(255, 255, 255); width: 100%; height: 30%; position: absolute; bottom: 0px;"
      />
    </div>
    <span
      class="ant-progress-indicator ant-progress-indicator-end ant-progress-indicator-outer"
      title="80%"
    >
      80%
    </span>
  </div>
</div>
`;

exports[`Progress should support steps 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="0"
  class="ant-progress ant-progress-status-normal ant-progress-steps ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-steps-body"
  >
    <div
      class="ant-progress-steps-item"
      style="width: 14px; height: 8px;"
    />
    <div
      class="ant-progress-steps-item"
      style="width: 14px; height: 8px;"
    />
    <div
      class="ant-progress-steps-item"
      style="width: 14px; height: 8px;"
    />
    <span
      class="ant-progress-indicator"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress steps should have default percent 0 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="0"
  class="ant-progress ant-progress-status-normal ant-progress-steps ant-progress-show-info css-var-root"
  role="progressbar"
>
  <div
    class="ant-progress-steps-body"
  >
    <div
      class="ant-progress-steps-item"
      style="width: 14px; height: 8px;"
    />
    <span
      class="ant-progress-indicator"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;
